--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#F23657"
+      "backgroundColor": "#ebebeb"
     },
     "ios": {
       "supportsTablet": true
